# start-parodus

./: CHANGELOG.md  autogen.sh  configure.ac
source/: Makefile.am
source/parodusStart/: start_parodus.c
source/test/: Makefile.am  gtest_main.cpp  run_ut.sh  start_parodus_mock.cpp  start_parodus_mock.h  start_parodus_test.cpp
